--- a/src/framework/styles/proceedings/mei.css
+++ b/src/framework/styles/proceedings/mei.css
@@ -1,7 +1,7 @@
-@import url("../oxy.css");
 
 @namespace oxy "http://www.oxygenxml.com/extensions/author";
 @namespace xml "http://www.w3.org/XML/1998/namespace";
+@namespace mei "http://www.music-encoding.org/ns/mei";
 
 confSubmission{/* body */
   margin: 2em 4em 4em;
@@ -89,31 +89,31 @@ td{
 /*span.bold{
   font-weight: bold;
 }*/
-*[rend~="bold"]{
+mei|*[rend~="bold"]{
   font-weight: bold;
 }
 /*span.underline{
   text-decoration: underline
 }*/
-*[rend~="underline"]{
+mei|*[rend~="underline"]{
   text-decoration: underline;
 }
 /*span.italic{
   font-style: italic;
 }*/
-*[rend~="italic"]{
+mei|*[rend~="italic"]{
   font-style: italic;
 }
 /*span.smcaps{
   font-variant: small-caps;
 }*/
-*[rend~="smcaps"]{
+mei|*[rend~="smcaps"]{
   font-variant: small-caps;
 }
 /*span.strike{
   text-decoration: line-through;
 }*/
-*[rend~="strike"]{
+mei|*[rend~="strike"]{
   text-decoration: line-through;
 }
 /*span.sub{
@@ -123,7 +123,7 @@ td{
   vertical-align: baseline;
   bottom: -0.15em;
 }*/
-*[rend~="sub"]{
+mei|*[rend~="sub"]{
   font-size: .75em;
   line-height: 0;
   position: relative;
@@ -137,7 +137,7 @@ td{
   vertical-align: baseline;
   top: -0.3em;
 }*/
-*[rend~="sup"]{
+mei|*[rend~="sup"]{
   font-size: .75em;
   line-height: 0;
   position: relative;
@@ -148,7 +148,7 @@ td{
 pre{
   font-family: 'Courier New', Courier, monospace;
 }*/
-*[rend~="fixed-width"]{
+mei|*[rend~="fixed-width"]{
   font-family: 'Courier New', Courier, monospace;
 }
 .footnote-ref{
@@ -172,52 +172,7 @@ pre{
   vertical-align: baseline;
   top: -0.3em;
 }
-egXML{ /* pre */
-  background-color: #f5f5f5;
-  font-family: 'Courier New', Courier, monospace;
-  margin: 1em 0;
-  border-radius: .5em;
-  position: relative;
-  /* add */
-  display: block;
-  padding: 1em;
-  -oxy-display-tags: none;
-  white-space:pre-wrap !important;
-}
 
-egXML[valid="true"]:before{ /* pre.valid:before */
-  position: relative;
-  top: -1em;
-  left: -1em;
-/*  bottom: 0;*/
-  width: 1em;
-  background-color: #5dde5d;
-  content: ' ';
-  border-radius: .5em 0 0 .5em;
-/*  display:block;*/
-  /* add */
-}
-
-egXML[valid="false"]:before{/* pre.invalid:before */
-  position: relative;
-  top: -1em;
-  left: -1em;
-  bottom: 0;
-  width: 1em;
-  background-color: #de625d;
-  content: ' ';
-  border-radius: .5em 0 0 .5em;
-}
-egXML[valid="feasible"]:before{
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 1em;
-  background-color: #5db5de;
-  content: ' ';
-  border-radius: .5em 0 0 .5em;
-}
 .blockquote{
   margin: 1.5em 2em 2em;
   font-size: .9em;
@@ -333,7 +288,7 @@ list[form="simple"] li{
   list-style:none !important;
 }
 
-*[target]{
+mei|*[target]{
   color: rgb(0, 0, 238);
   text-decoration: underline;
   -oxy-link: attr(target);
@@ -367,7 +322,7 @@ bibl[target]:after{
   content: "] ";
 }
 
-ref{
+mei|ref{
   color: rgb(0, 0, 238);
   text-decoration: underline;
   link: oxy_xpath("normalize-space(./text())");
