--- a/src/framework/styles/v3.0.0/linking.css
+++ b/src/framework/styles/v3.0.0/linking.css
@@ -13,3 +13,11 @@
   link: attr(authURI)attr(codedval);
   content: "⬈";
 }
+
+ref:empty[target] {
+  color: rgb(0, 0, 238);
+  text-decoration: underline;
+  -oxy-link: attr(target);
+  link: attr(target);
+  content: "⬈" attr(target);
+}
