--- a/src/framework/styles/v3.0.0/shared.css
+++ b/src/framework/styles/v3.0.0/shared.css
@@ -70,6 +70,29 @@ pb[n] {
 respStmt > * + *:before {
   content: "; ";
 }
+
+respStmt {
+ display: block;
+}
+
+respStmt:before {
+  content: "${i18n(respStmt)}" ": ";
+  font-weight: bold;
+}
+
+respStmt > resp {
+  font-weight: bold;
+}
+
+respStmt > resp:after {
+  content: ": ";
+}
+
+respStmt > persName[role]:after {
+  content: " (" attr(role) ")";
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
 /* /respStmt */
 
 sb {
