--- a/src/framework/styles/v3.0.0/text.css
+++ b/src/framework/styles/v3.0.0/text.css
@@ -5,7 +5,7 @@ li {
 list {
   display: block;
   list-style-type: asterisks;
-  margin: 0.5em 0;
+  margin: 0.5em 0 0 1em !important;
   position: static;
 }
 
