mec-proceedings: add styling for tables

--- a/src/framework/styles/mec-proceedings/mei.css
+++ b/src/framework/styles/mec-proceedings/mei.css
@@ -72,6 +72,19 @@ table{
   /* add */
   display:table;
 }
+
+tr {
+  display: table-row;
+}
+
+table > caption {
+  display: table-caption;
+}
+
+td {
+  display: table-cell;
+}
+
 tr + tr td{
   border-top: .5px solid #999999;
 }
